--- a/Activate-KickPro.desktop
+++ b/Activate-KickPro.desktop
@@ -5,10 +5,12 @@ Terminal=true
 Exec=sudo /bin/bash -c "/home/ironfoot/Capstone/run.sh"
 Name=Activate KickPro
 Comment=Run Ball-Launcher
-Icon=/home/ironfoot/my_icon.png
+Icon=/home/ironfoot/Capstone/my_icon.png
 
 # Do the following to setup
-# chmod +x capstone.desktop
+# cp Activate-KickPro.desktop /home/ironfoot/Desktop
+# cd ~/Desktop
+# chmod +x Activate-KickPro.desktop
 # sudo visudo
 # Add to end of file:
 # ironfoot ALL=(ALL) NOPASSWD: /bin/bash -c /home/ironfoot/Capstone/run.sh
