--- a/GUI.desktop
+++ b/GUI.desktop
@@ -10,7 +10,7 @@ Icon=/home/ironfoot/Captsone/my_icon.png
 # Do the following to setup
 # cp GUI.desktop /home/ironfoot/Desktop
 # cd ~/Desktop
-# chmod +x capstone.desktop
+# chmod +x GUI.desktop
 # sudo visudo
 # Add to end of file:
 # ironfoot ALL=(ALL) NOPASSWD: /use/bin/python3 /home/ironfoot/Capstone/userInterface.py
